resources/antlr/generated/ExprParser.py
# Generated from parser/resources/antlr/grammar/Expr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main:'", "'pin'", "'instance'", "'.'", 
                     "'-'", "':'" ]

    symbolicNames = [ "<INVALID>", "MAIN", "PIN", "INSTANCE", "DOT", "DASH", 
                      "COLON", "IDENTIFIER", "NEWLINE", "WS", "LINE_COMMENT" ]

    RULE_prog = 0
    RULE_main_block = 1
    RULE_named_block = 2
    RULE_block_content = 3
    RULE_element = 4
    RULE_pin_decl = 5
    RULE_instance_decl = 6
    RULE_net_decl = 7
    RULE_pin_ref = 8
    RULE_block_ref = 9
    RULE_instance_name = 10
    RULE_pin_name = 11
    RULE_net_name = 12

    ruleNames =  [ "prog", "main_block", "named_block", "block_content", 
                   "element", "pin_decl", "instance_decl", "net_decl", "pin_ref", 
                   "block_ref", "instance_name", "pin_name", "net_name" ]

    EOF = Token.EOF
    MAIN=1
    PIN=2
    INSTANCE=3
    DOT=4
    DASH=5
    COLON=6
    IDENTIFIER=7
    NEWLINE=8
    WS=9
    LINE_COMMENT=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_block(self):
            return self.getTypedRuleContext(ExprParser.Main_blockContext,0)


        def named_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.Named_blockContext)
            else:
                return self.getTypedRuleContext(ExprParser.Named_blockContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = ExprParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.main_block()
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 27
                self.named_block()
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN(self):
            return self.getToken(ExprParser.MAIN, 0)

        def NEWLINE(self):
            return self.getToken(ExprParser.NEWLINE, 0)

        def block_content(self):
            return self.getTypedRuleContext(ExprParser.Block_contentContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_main_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_block" ):
                listener.enterMain_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_block" ):
                listener.exitMain_block(self)




    def main_block(self):

        localctx = ExprParser.Main_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(ExprParser.MAIN)
            self.state = 34
            self.match(ExprParser.NEWLINE)
            self.state = 35
            self.block_content()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Named_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(ExprParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(ExprParser.NEWLINE, 0)

        def block_content(self):
            return self.getTypedRuleContext(ExprParser.Block_contentContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_named_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamed_block" ):
                listener.enterNamed_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamed_block" ):
                listener.exitNamed_block(self)




    def named_block(self):

        localctx = ExprParser.Named_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_named_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(ExprParser.IDENTIFIER)
            self.state = 38
            self.match(ExprParser.COLON)
            self.state = 39
            self.match(ExprParser.NEWLINE)
            self.state = 40
            self.block_content()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_contentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ElementContext)
            else:
                return self.getTypedRuleContext(ExprParser.ElementContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_block_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_content" ):
                listener.enterBlock_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_content" ):
                listener.exitBlock_content(self)




    def block_content(self):

        localctx = ExprParser.Block_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block_content)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 42
                    self.element() 
                self.state = 47
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pin_decl(self):
            return self.getTypedRuleContext(ExprParser.Pin_declContext,0)


        def NEWLINE(self):
            return self.getToken(ExprParser.NEWLINE, 0)

        def instance_decl(self):
            return self.getTypedRuleContext(ExprParser.Instance_declContext,0)


        def net_decl(self):
            return self.getTypedRuleContext(ExprParser.Net_declContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)




    def element(self):

        localctx = ExprParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_element)
        self._la = 0 # Token type
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.pin_decl()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 49
                    self.match(ExprParser.NEWLINE)


                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.instance_decl()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 53
                    self.match(ExprParser.NEWLINE)


                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.net_decl()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 57
                    self.match(ExprParser.NEWLINE)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pin_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PIN(self):
            return self.getToken(ExprParser.PIN, 0)

        def pin_name(self):
            return self.getTypedRuleContext(ExprParser.Pin_nameContext,0)


        def DASH(self):
            return self.getToken(ExprParser.DASH, 0)

        def net_name(self):
            return self.getTypedRuleContext(ExprParser.Net_nameContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_pin_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPin_decl" ):
                listener.enterPin_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPin_decl" ):
                listener.exitPin_decl(self)




    def pin_decl(self):

        localctx = ExprParser.Pin_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_pin_decl)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(ExprParser.PIN)
                self.state = 63
                self.pin_name()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.match(ExprParser.PIN)
                self.state = 65
                self.pin_name()
                self.state = 66
                self.match(ExprParser.DASH)
                self.state = 67
                self.net_name()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Instance_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSTANCE(self):
            return self.getToken(ExprParser.INSTANCE, 0)

        def instance_name(self):
            return self.getTypedRuleContext(ExprParser.Instance_nameContext,0)


        def COLON(self):
            return self.getToken(ExprParser.COLON, 0)

        def block_ref(self):
            return self.getTypedRuleContext(ExprParser.Block_refContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_instance_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstance_decl" ):
                listener.enterInstance_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstance_decl" ):
                listener.exitInstance_decl(self)




    def instance_decl(self):

        localctx = ExprParser.Instance_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_instance_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(ExprParser.INSTANCE)
            self.state = 72
            self.instance_name()
            self.state = 73
            self.match(ExprParser.COLON)
            self.state = 74
            self.block_ref()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Net_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pin_ref(self):
            return self.getTypedRuleContext(ExprParser.Pin_refContext,0)


        def DASH(self):
            return self.getToken(ExprParser.DASH, 0)

        def net_name(self):
            return self.getTypedRuleContext(ExprParser.Net_nameContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_net_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNet_decl" ):
                listener.enterNet_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNet_decl" ):
                listener.exitNet_decl(self)




    def net_decl(self):

        localctx = ExprParser.Net_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_net_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.pin_ref()
            self.state = 77
            self.match(ExprParser.DASH)
            self.state = 78
            self.net_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pin_refContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pin_name(self):
            return self.getTypedRuleContext(ExprParser.Pin_nameContext,0)


        def instance_name(self):
            return self.getTypedRuleContext(ExprParser.Instance_nameContext,0)


        def DOT(self):
            return self.getToken(ExprParser.DOT, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_pin_ref

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPin_ref" ):
                listener.enterPin_ref(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPin_ref" ):
                listener.exitPin_ref(self)




    def pin_ref(self):

        localctx = ExprParser.Pin_refContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_pin_ref)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.pin_name()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.instance_name()
                self.state = 82
                self.match(ExprParser.DOT)
                self.state = 83
                self.pin_name()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_refContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_block_ref

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_ref" ):
                listener.enterBlock_ref(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_ref" ):
                listener.exitBlock_ref(self)




    def block_ref(self):

        localctx = ExprParser.Block_refContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block_ref)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(ExprParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Instance_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_instance_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstance_name" ):
                listener.enterInstance_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstance_name" ):
                listener.exitInstance_name(self)




    def instance_name(self):

        localctx = ExprParser.Instance_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_instance_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(ExprParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pin_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_pin_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPin_name" ):
                listener.enterPin_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPin_name" ):
                listener.exitPin_name(self)




    def pin_name(self):

        localctx = ExprParser.Pin_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pin_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(ExprParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Net_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_net_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNet_name" ):
                listener.enterNet_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNet_name" ):
                listener.exitNet_name(self)




    def net_name(self):

        localctx = ExprParser.Net_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_net_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ExprParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





